--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 
-    <img src="img/icon.png">
-<div class="container">
-    <div id="app">
-        {{time_compute}}
-        {{percent}}%
+
+    <div id="app" class="center">
+        <img src="img/icon.png" draggable="false">
+
+        <p>{{time_compute}}</p>
+        <p>{{percent}}%</p>
         <button @click="start_time()" v-if="status==1" class="btn btn-primary">Start</button>
         <button @click="stop_button()" v-if="status==2" class="btn btn-primary">Stop</button>
         <div v-if="status==3">Please take a look at an object 20 metres away for the next 20 seconds</div>
     </div>
-</div>
 </body>
 </html>
